# portfolio_optimization_book_exercises

./: Cargo.toml  README.md
src/: ch02_01.rs  ch02_02.rs  ch02_03.rs  ch02_04.rs  ch02_05.rs  ch02_06.rs  main.rs  utils.rs
src/exercises/: ch02_main.rs  ch03_main.rs  mod.rs
src/exercises/ch02/: ch02_01.rs  ch02_02.rs  ch02_03.rs  ch02_04.rs  ch02_05.rs  ch02_06.rs  mod.rs
src/exercises/ch03/: ch03_01.rs  ch03_02.rs  ch03_03.rs  ch03_04.rs  ch03_05.rs  ch03_06.rs  ch03_07.rs  ch03_08.rs  ch03_09.rs  ch03_10.rs  ch03_11.rs  mod.rs
src/utils/: mod.rs  student_t_mle.rs  utils.rs
